# EXRcheck

./: .gitignore  CMakeLists.txt  CMakePresets.json  Clean.bat  Clean.cmake  Clean.sh  FileIO.sln  README.md
FileIO/: FileIO.vcxproj  FileIO.vcxproj.filters
FileIO/_docs/: doc_OpenEXR.h  doc_todo.h
FileIO/src/: Application.cpp  pcinfo.h  types.h  utils.h
FileIO/src/exrData/: MagicNumber.h  Pixeldata.h  VersionField.h  exrTypes.h  exrTypesExperimental.h
_docs/: doc_todo.h
_docs/user/: MANUAL_FOR_USER.txt
assets/images/test/: exr_no-xDensity-attrib_RgbaF32-sRGB_resaved-using-GIMP3.0.0-RC3.exr  how to create test images.txt  test1_RgbaF32CompressNo_and_xDensity_nonColor.exr  test1_RgbaF32CompressNo_and_xDensity_sRGB.exr  test2_RgbaF32CompressZip_nonColor.exr
src/: Application.cpp  ExeParams.h  TemplateConcepts.h  exrFileData.h  pcinfo.h  types.h  utils.h
src/exrData/: MagicNumber.h  Pixeldata.h  VersionField.h  exrConsta.h  exrTypes.h  exrTypes_demo.h
